# TianLi.Installer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Installer/: CMakeLists.txt  main.cpp
Installer/lib_core/: CMakeLists.txt  installer.core.cpp  installer.core.h  tianli.core.h
Installer/lib_core/core_decompression/: CMakeLists.txt  decompression.cpp  decompression.h
Installer/lib_core/core_download/: CMakeLists.txt  download.cpp  download.h
Installer/lib_core/core_install/: CMakeLists.txt  install.cpp  install.h
Installer/lib_core/core_registration/: CMakeLists.txt  registration.cpp  registration.h
Installer/lib_core/core_release/: CMakeLists.txt  release.cpp  release.h
Installer/lib_ui/: CMakeLists.txt  tianli_widget.cpp  tianli_widget.h  tianli_widget.ui  tianli_window.cpp  tianli_window.h
Installer/lib_ui/common/time_line_label/: time_line_label.cpp  time_line_label.h  time_line_label.ui
Installer/lib_ui/qrc/: tianli.qrc
Installer/lib_ui/widget/: rounded_rectangle.cpp  rounded_rectangle.h  rounded_rectangle.ui
Installer/resource/: RCa19728  app_info.rc  resource.aps  resource.h  resource.rc
cmake/: utils.cmake  version.cmake
config/: version  version.ver
docs/: 1.build.md
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  main.cpp
tests/core_decompression/: CMakeLists.txt  main.cpp
tests/core_download/: CMakeLists.txt  main.cpp
tests/create_tmp_file/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
